--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -103,7 +103,7 @@
   padding-right: 19px;
 
   &-text {
-    font-family: "Myriad Pro";
+    font-family: "Myriad Pro", sans-serif;
     font-size: 12px;
     margin-left: 7px;
   }
