--- a/src/components/Select/SearchBar/SearchBar.scss
+++ b/src/components/Select/SearchBar/SearchBar.scss
@@ -56,7 +56,7 @@
 
   &__form-submit{
     width: 166px;
-    background-color: #FF8900;
+    background-color: #ff8900;
     border: none;
     color: #fff;
     font-family: Roboto;
