--- a/src/components/Select/Menu/Menu.scss
+++ b/src/components/Select/Menu/Menu.scss
@@ -27,12 +27,12 @@
     list-style: none;
     padding-left: 0;
     text-align: start;
-    margin: 0;
+    margin: 12px 0 0;
     animation: visibleList 0.4s
   }
 
   &__link-item{
-    height: 64px;
+    height: 52px;
     border-bottom: 1px solid #e8e8e8;;
     display: flex;
     align-items: center;
