--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url(//db.onlinewebfonts.com/c/3dd6e9888191722420f62dd54664bc94?family=Myriad+Pro);
 @import url(//db.onlinewebfonts.com/c/1e7e97d0da36ea1b00a66348a43dfb26?family=Proxima+Nova);
+@import url(//db.onlinewebfonts.com/c/08a5c9df35a3a12bd804a1865ba93284?family=Roboto+Black);
 @import url(//db.onlinewebfonts.com/c/08a5c9df35a3a12bd804a1865ba93284?family=Roboto+Black+Italic);
 
 body {
