--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,10 @@
   max-width: 1360px;
   margin-left: auto;
   margin-right: auto;
+
+  @media(max-width: 1360px){
+    max-width: 1110px;
+  }
 }
 
 .App__footer {
