--- a/src/components/Cards/CardsBlock/CardsBlock.scss
+++ b/src/components/Cards/CardsBlock/CardsBlock.scss
@@ -5,6 +5,10 @@
   text-align: start;
   box-sizing: border-box;
 
+  @media(max-width: 1360px){
+    padding: 20px 6px 0 10px;
+  }
+
   &__label{
     display: inline-block;
     background-color: #f2f2f2;
@@ -24,6 +28,10 @@
     font-size: 17px;
     line-height: 26px;
     text-decoration: underline;
+
+    @media(max-width: 1360px){
+      font-size: 14px;
+    }
   }
 
   &__feedback {
@@ -40,6 +48,11 @@
     font-size: 13px;
     line-height: 26px;
     margin-left: 5px;
+
+    @media(max-width: 1360px){
+      font-size: 11px;
+      margin-left: 7px;
+    }
   }
 
   &__feedback-link {
@@ -51,6 +64,10 @@
     color: #757575;
     font-family: Roboto;
     font-size: 12px;
+
+    @media(max-width: 1360px){
+      font-size: 11px;
+    }
   }
 
   &__images{
@@ -178,6 +195,10 @@
 
   &-item {
     padding-right: 5px;
+
+    @media(max-width: 1360px){
+      padding-right: 2px;
+    }
   }
 }
 
