--- a/src/components/Footer/Block1/Block1.scss
+++ b/src/components/Footer/Block1/Block1.scss
@@ -2,6 +2,10 @@
   width: 575px;
   box-sizing: border-box;
 
+  @media(max-width: 1360px){
+    max-width: 510px;
+  }
+
   &__title{
     text-align: start;
     height: 51px;
@@ -82,5 +86,26 @@
     font-weight: 700;
     cursor: pointer;
     outline-color: #ff8900
+  }
+}
+
+.subscribe{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  overflow: auto;
+  outline: 0;
+  height: 100%;
+  background-color: rgba(53, 36, 36, 0.85);
+  animation: modal .5s both;
+
+  &-success{
+    position: absolute;
+    top: 300px;
+    left: 0;
+    right: 0;
   }
 }
