--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,6 +5,10 @@
   box-sizing: border-box;
   padding: 36px 0 8px;
 
+  @media(max-width: 1360px){
+    max-width: 1110px;
+  }
+
   &__header{
     display: flex;
   }
