--- a/src/components/Footer/LogoBlock/LogoBlock.scss
+++ b/src/components/Footer/LogoBlock/LogoBlock.scss
@@ -9,6 +9,10 @@
     display: flex;
     align-items: center;
     width: 575px;
+
+    @media(max-width: 1360px){
+      max-width: 525px;
+    }
   }
 
   &__logo-image{
@@ -27,6 +31,10 @@
     margin-left: 115px;
     display: flex;
     align-items: center;
+
+    @media(max-width: 1360px){
+      margin-left: 40px;
+    }
   }
 
   &__social-frame{
@@ -44,6 +52,10 @@
     margin-left: 225px;
     display: flex;
     align-items: center;
+
+    @media(max-width: 1360px){
+      margin-left: 60px;
+    }
   }
 
   &__wezom-logo{
@@ -55,6 +67,9 @@
 
   &__wezom-description{
     padding-left: 17px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   &__wezom-title{
@@ -67,7 +82,6 @@
   &__wezom-agency{
     font-family: "Myriad Pro";
     font-size: 14px;
-    line-height: 30px;
   }
 }
 
