--- a/src/components/Select/SelectBlock/SelectBlock.scss
+++ b/src/components/Select/SelectBlock/SelectBlock.scss
@@ -3,6 +3,10 @@
   padding-left: 20px;
   box-sizing: border-box;
 
+  @media(max-width: 1360px){
+    max-width: 900px;
+  }
+
   &__body {
     background-color: #696969;
     height: 300px;
