--- a/src/components/Footer/LogoBlock/LogoBlock.scss
+++ b/src/components/Footer/LogoBlock/LogoBlock.scss
@@ -80,7 +80,7 @@
   }
 
   &__wezom-agency{
-    font-family: "Myriad Pro";
+    font-family: "Myriad Pro", sans-serif;
     font-size: 14px;
   }
 }
